--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
-
+        
+        <a href="index.html" class="mr-auto"><img id="icons1" src="assets/img/artboard1.svg" alt=""></a>
       <h1>Hi, I'm Lizzie.</h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-        <h2>I'm a <span>graphic designer</span> from Michigan.</h2>
+        <h2>I like to <span>design</span> stuff.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -70,6 +69,9 @@
         <a href="https://www.linkedin.com/in/lizziejulia/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://www.behance.net/lizzie" class="behance"><i class="bi bi-behance"></i></a>
       </div>
+        
+        <a href="index.html" class="mr-auto"><img id="icons2" src="assets/img/artboard2.svg" alt=""></a>
+
 
     </div>
   </header><!-- End Header -->
