--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <div class="resume-item">
             <h4>Graphic Information Technology</h4>
             <h5>Arizona State University | 2021</h5>
-            <p><br>Graduated with a bachelors degree in Graphic Information Technology and a secondary focus in English. Other areas of study include Makerting and Entrepreneurship Management.</p>
+            <p><br>Graduated with a bachelors degree in Graphic Information Technology and a secondary focus in English. Other areas of study include Marketing and Entrepreneurship Management.</p>
           </div>
           <div class="resume-item">
             <h4>Graphic Design &amp; Journalism</h4>
