--- a/index.html
+++ b/index.html
@@ -305,6 +305,18 @@
         
         <div class="col-lg-6">
           <h7>Experience</h7>
+           <div class="resume-item">
+            <h4>Paginator</h4>
+            <h5>Paxton Media Group | 2023 - present</h5>
+            <p>
+            <ul>
+              <li>Designed newspaper layouts for multiple publications</li>
+              <li>Designed creative layouts while adhering to brand guidelines</li>
+              <li>Met strict deadlines</li>
+              <li>Edited copy to meet APA Style guidelines</li>
+            </ul>
+            </p>
+          </div>
           <div class="resume-item">
             <h4>Graphic Designer</h4>
             <h5>Freelance | 2012 - Present</h5>
