--- a/index.html
+++ b/index.html
@@ -310,10 +310,12 @@
             <h5>Paxton Media Group | 2023 - present</h5>
             <p>
             <ul>
-              <li>Designed newspaper layouts for multiple publications</li>
-              <li>Designed creative layouts while adhering to brand guidelines</li>
+              <li>Developed newspaper layouts for multiple different publications</li>
+              <li>Designed creative pages while adhering to brand guidelines</li>
+              <li>Worked with editors and ad reps to ensure pages included all necessary assets</li>
               <li>Met strict deadlines</li>
               <li>Edited copy to meet APA Style guidelines</li>
+              <li>Proofed other designers pages and checked for errors</li>
             </ul>
             </p>
           </div>
