--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
               <li>Developed newspaper layouts for multiple different publications</li>
               <li>Designed creative pages while adhering to brand guidelines</li>
               <li>Worked with editors and ad reps to ensure pages included all necessary assets</li>
+              <li>Edited, cropped, and toned photos as necessary</li>
               <li>Met strict deadlines</li>
               <li>Edited copy to meet APA Style guidelines</li>
               <li>Proofed other designers pages and checked for errors</li>
