--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
               <li>Designed layouts using esthetic design concepts</li>
               <li>Worked and strategized with team members</li>
               <li>Generated unique and relevant content for readers</li>
+              <li>Edited photos as needed</li>
               <li>Met strict deadlines</li>
               <li>Edited copy to meet APA Style guidelines</li>
               <li>Confirmed all layouts were free from errors and prepared for print</li>
