--- a/index.html
+++ b/index.html
@@ -417,6 +417,20 @@
 
       <div class="row portfolio-container">
 
+       <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/print/peach.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layouts</h4>
+              <p>Citrus County Chronicle Homefront</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/beauty/2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="print.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/beauty/2.png" class="img-fluid" alt="">
