--- a/print.html
+++ b/print.html
@@ -51,11 +51,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/print/peach.png" alt="">
+                  <img src="assets/img/portfolio/print/peach.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/print/violets.png" alt="">
+                  <img src="assets/img/portfolio/print/violets.jpg" alt="">
                 </div>
 
               </div>
