--- a/print.html
+++ b/print.html
@@ -65,7 +65,7 @@
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>Beauty-Focused Instagram Posts</h3>
+            <h3>Newspaper Layout Designs</h3>
             <ul>
               <li><strong>Client</strong>: Citrus County Chronicle</li>
               <li><strong>Category</strong>: Layouts &amp; Advertisements</li>
