--- a/watermelon.html
+++ b/watermelon.html
@@ -51,7 +51,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/watermelon.png" alt="">
+                  <img src="assets/img/portfolio/watermelon.png" alt="">
                 </div>
 
               </div>
