--- a/index.html
+++ b/index.html
@@ -444,6 +444,20 @@
             </div>
           </div>
         </div>
+
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/watermelon.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Watermelon</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/watermelon.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="watermelon.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
           
           <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-brand">
           <div class="portfolio-wrap">
