--- a/index.html
+++ b/index.html
@@ -417,14 +417,14 @@
 
       <div class="row portfolio-container">
 
-       <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/print/peach.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/caterpillar.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Newspaper Layouts</h4>
-              <p>Citrus County Chronicle Homefront</p>
+              <h4>Newspaper Layout</h4>
+              <p>Butterfly</p>
               <div class="portfolio-links">
-                <a href="print.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="caterpillar.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -510,6 +510,32 @@
           </div>
         </div>
 
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/garden.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Garden</p>
+              <div class="portfolio-links">
+                <a href="garden.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/chelsea.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Chelsea</p>
+              <div class="portfolio-links">
+                <a href="watermelon.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/diamond/1.png" class="img-fluid" alt="">
@@ -553,6 +579,32 @@
           </div>
         </div>
 
+        <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/cocktails.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Cocktails</p>
+              <div class="portfolio-links">
+                <a href="cocktails.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/frg&birb.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Frog & Bird</p>
+              <div class="portfolio-links">
+                <a href="frg&birb.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-cover">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/sosa/bottle.png" class="img-fluid" alt="">
@@ -562,6 +614,19 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/sosa/bottle.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="bottle.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/pinkgreen.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Pink/Green</p>
+              <div class="portfolio-links">
+                <a href="pinkgreen.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -619,6 +684,32 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/canna/main.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="canna.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/herbs.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Herbs</p>
+              <div class="portfolio-links">
+                <a href="herbs.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/kokedama.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Kokedama</p>
+              <div class="portfolio-links">
+                <a href="kokedama.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -693,6 +784,19 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/sosa/thisisit1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="thisisit.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/print/peach.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Color of the Year</p>
+              <div class="portfolio-links">
+                <a href="print.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
