--- a/frgbirb.html
+++ b/frgbirb.html
@@ -51,7 +51,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/frg&birb.PNG" alt="">
+                  <img src="assets/img/portfolio/frgbirb.PNG" alt="">
                 </div>
 
               </div>
