--- a/index.html
+++ b/index.html
@@ -704,6 +704,19 @@
             </div>
           </div>
         </div>
+
+        <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/print/roses.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Roses</p>
+              <div class="portfolio-links">
+                <a href="roses.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
           
         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-brand">
           <div class="portfolio-wrap">
@@ -776,12 +789,12 @@
 
          <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/print/peach.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/print/flowers.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Newspaper Layout</h4>
-              <p>Color of the Year</p>
+              <p>Flowers</p>
               <div class="portfolio-links">
-                <a href="print.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="flowers.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -796,6 +809,60 @@
               <p>Oakland University</p>
               <div class="portfolio-links">
                 <a href="geo.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/print/berries.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Strawberry</p>
+              <div class="portfolio-links">
+                <a href="berries.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+       <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/print/pollen.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Pollen</p>
+              <div class="portfolio-links">
+                <a href="pollen.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/print/squirrel.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Squirrel</p>
+              <div class="portfolio-links">
+                <a href="squirrel.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/print/peach.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Newspaper Layout</h4>
+              <p>Color of the Year</p>
+              <div class="portfolio-links">
+                <a href="print.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
