--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
           </div>
         </div>
 
-        <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
+        <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-cover">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/diamond/1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -589,12 +589,12 @@
 
         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 portfolio-item filter-misc">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/frg&birb.PNG" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/frgbirb.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Newspaper Layout</h4>
               <p>Frog & Bird</p>
               <div class="portfolio-links">
-                <a href="frg&birb.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="frgbirb.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
