--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>Location</h3>
-            <p>Los Angeles, CA</p>
+            <p>Grand Rapids, MI</p>
           </div>
         </div>
       </div>
